updating navigation css

--- a/Project_0/images.html
+++ b/Project_0/images.html
@@ -9,13 +9,11 @@
 </head>
 <body>
     <div id="content">
-        <div class="top_right_i">
-            <a href="index.html">Google Home</a>
+        <div class="navi">
+            <a href="index.html">Home</a>
+            <a href="images.html">Advance</a>
         </div>
 
-        <div class="top_right_a">
-            <a href="images.html">Google Advance</a>
-        </div>
 
         <div class="ident-f">
             <img class="logo" src="Images/googlelogo_color_272x92dp.png" alt="Google_logo" width="272" height="92">
