--- a/Project_0/index.html
+++ b/Project_0/index.html
@@ -8,14 +8,10 @@
     </head>
     <body>
         <div id="content">
-            <div class="top_right_i">
-                <a href="images.html">Google Images</a>
+            <div class="navi">
+                    <a href="images.html">Images</a>
+                    <a href="images.html">Advance</a>
             </div>
-
-            <div class="top_right_a">
-                <a href="images.html">Google Advance</a>
-            </div>
-
             <div>
                 <img class="logo" src="Images/googlelogo_color_272x92dp.png" alt="Google_logo" width="272" height="92">
             </div>
