correcting label advance to advanced

--- a/Project_0/images.html
+++ b/Project_0/images.html
@@ -11,7 +11,7 @@
     <div id="content">
         <div class="navi">
             <a href="index.html">Home</a>
-            <a href="advance.html">Advance</a>
+            <a href="advance.html">Advanced</a>
         </div>
         <div class="ident-f">
             <img class="logo" src="Images/googlelogo_color_272x92dp.png" alt="Google_logo" width="272" height="92">
