--- a/Project_0/index.html
+++ b/Project_0/index.html
@@ -10,7 +10,7 @@
         <div id="content">
             <div class="navi">
                     <a href="images.html">Images</a>
-                    <a href="advance.html">Advance</a>
+                    <a href="advance.html">Advanced</a>
             </div>
             <div>
                 <img class="logo" src="Images/googlelogo_color_272x92dp.png" alt="Google_logo" width="272" height="92">
