--- a/Project_0/advance.html
+++ b/Project_0/advance.html
@@ -39,7 +39,7 @@
             <input name="as_eq" type="text" id="noneWords">
         </div>
         <div>
-            <input class="s_button" value="Advance Search" type="submit">
+            <input class="s_button" value="Advanced Search" type="submit">
         </div>
     </form>
 
