--- a/Project_0/advance.html
+++ b/Project_0/advance.html
@@ -22,19 +22,19 @@
         <label class="appstyle"> Find pages with...</label>
     </div>
     <form action="https://www.google.com/search" method="get">
-        <div class="content">
+        <div class="content_a">
             <label>All this words:</label>
             <input name="as_q" type="text" id="allWords">
         </div>
-        <div class="content">
+        <div class="content_a">
             <label>This exact word or phrase:</label>
             <input name="as_epq" type="text" id="exactPhrase">
         </div>
-        <div class="content">
+        <div class="content_a">
             <label>Any of this words:</label>
             <input name="as_oq" type="text" id="anyWords">
         </div>
-        <div class="content">
+        <div class="content_a">
             <label>None of this words:</label>
             <input name="as_eq" type="text" id="noneWords">
         </div>
